@@ -1729,6 +1729,7 @@ helpviewer.title=jEdit Help
 helpviewer.loading=Loading...
 helpviewer.back.label=Back
 helpviewer.forward.label=Forward
+helpviewer.copy-link.label=Copy link to clipboard
 
 helpviewer.toc.loading=Loading...
 helpviewer.toc.label=Contents
